Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
- #2521: finer control of required widgets
Bug fixes
~~~~~~~~~
- #2494: conversion from UTF8 (LDAP) too permissive (UnicodeError downstream)
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 